# path2target

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: Home.py
app/pages/: 1_Central_Dogma_Navigator.py  2_Metadata_Definition.py  2_Raw_Layer_Ingest.py  3_Model_Designer.py  4_Transform_Export.py
configs/mappings/: example.yaml
path2target/: __init__.py  agent.py  apis.py  cli.py  ingest.py  llm_reasoning.py  metadata_defs.py  model.py  ols.py  resolvers.py  schema_infer.py  transform.py
