[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "path2target"
version = "0.1.0"
description = "Automated transformation engine for biomedical KGs: ingest, schema infer, ontology mapping, and RDF/JSON-LD/TSV export"
authors = [{ name = "Ragavi Shanmugam" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "requests>=2.31",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "rdflib>=7.0",
  "pyshacl>=0.24",
  "typer>=0.12",
  "streamlit>=1.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pre-commit>=3.5",
  "ruff>=0.5.0",
  "black>=24.4",
]

[project.scripts]
path2t = "path2target.cli:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["path2target*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B"]
ignore = []


